2008-06-28 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/ExpressionNode.py: Prioritize division and
	multiplication over other arithmetic operators.
	* src/Exscript/Exscript.py, exscript: Add support for interactive variables
	by setting the variable value to a bracketed expression (such as {foo}).
	* src/Exscript/FooLib/UrlParser.py: Cleanups.

2008-06-27 Samuel Abels <http://debain.org>

	* exscript, src/Exscript/Exscript.py: Fix several command line arguments
	that were mistakenly ignored. Got rid of the -a and -A command line
	arguments - this should now be done in the Exscript.
	* src/Exscript/TerminalActions/*.py: Port to new SpiffWorkQueue API.
	* src/Exscript/Interpreter/stdlib/Sys/tacacs_*.py: Add functions for
	aquiring/releasing the global TACACS lock.
	* exscript, src/Exscript/TerminalActions/LoggedSequence.py,
	src/Exscript/Exscript.py: Removed useless logfile locks. Added an overwrite 
	option for logfiles.
	* exscript, src/Exscript/Exscript.py: Support for selecting the ssh version.
	* src/Exscript/Interpreter/stdlib/Connection/auto_authorize.py: New stdlib
	function that attempts to automatically send the appropriate authorization
	command to the remote host.

2008-06-26 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/Connection/*.py: Renamed send() to exec().
	Replaced old send() function by a function that does not wait for a prompt 
	after sending the data. Added sendline() and execline() equivalents that
	automatically append a newline character.
	* src/Exscript/Interpreter/Code.py, src/Exscript/Interpreter/Term.py: Add
	support for bool types using the "true" and "false" keywords.
	* src/Exscript/Interpreter/Loop.py: Allow for more relaxed whitespace
	handling.
	* src/Exscript/Interpreter/*.py: Cleanup the parser by adding a
	parser.skip() method to replace useless while loops everywhere.
	* src/Exscript/Interpreter/stdlib/Connection/guess_os.py: New.

2008-06-25 Samuel Abels <http://debain.org>
