@@ -6,18 +6,20 @@ def execute(scope, password = [None]):
 
     # Send the authorization command.
     lock.acquire()
-    if conn.guess_os() in ('ios', 'ios-xr'):
-        conn.execute('enable')
-    elif conn.guess_os() == 'junos':
+    try:
+        if conn.guess_os() in ('ios', 'ios-xr'):
+            conn.send('enable\r')
+        elif conn.guess_os() == 'junos':
+            lock.release()
+            return # does not require authorization
+        else:
+            lock.release()
+            return # skip unsupported OSes
+    except:
         lock.release()
-        return # does not require authorization
-    else:
-        lock.release()
-        return # skip unsupported OSes
+        return
 
     # Send the login information.
     conn.authorize(password[0], wait = 1)
     lock.release()
-    response = conn.response.split('\n')[1:]
-    scope.define(_buffer = response)
     return 1
